hphp/test/slow/ext_json/t81374094.php.expectf
Fatal error: request has exceeded memory limit in %s/t81374094.php on line 5
